fixed styling bug on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -37,6 +37,10 @@
     background-color: #016101;
 }
 
+.login{
+    display: none;
+}
+
 a{
     text-decoration: none;
 }
